src/test/resources/semantic_errors/true_GT_string.notc
int fun() {
    if (true > "fdashg") {
        return;
    }
}

void main() {
}
